Remove unused code, update visuality

--- a/ToDo.Web/wwwroot/index.html
+++ b/ToDo.Web/wwwroot/index.html
@@ -12,6 +12,7 @@
     <!--<link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />-->
     <link href="css/app.css" rel="stylesheet" />
     <link href="ToDo.Web.styles.css" rel="stylesheet" />
+    <link href="css/bootstrap/CustomBootstrap.css" rel="stylesheet" />
 </head>
 
 <body>
